--- a/million/card/index.html
+++ b/million/card/index.html
@@ -13659,4 +13659,424 @@
                     <p>思い出いっぱい！　中谷育 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="26" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1230/">
+                    <img src="img/gree_1230_nf.jpg">
+                    <p>ｽﾌﾟﾗｯｼｭｼｱﾀ-開演! 七尾百合子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1589">
+                    <img src="img/td_1589_0_nf.jpg">
+                    <p>流れる読書スペース　七尾百合子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="26" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1231/">
+                    <img src="img/gree_1231_nf.jpg">
+                    <p>流れる読書ｽﾍﾟ-ｽ 七尾百合子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1589">
+                    <img src="img/td_1589_1_nf.jpg">
+                    <p>流れる読書スペース　七尾百合子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="46" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card561/">
+                    <img src="img/gree_561_nf.jpg">
+                    <p>泉への願いごと 百瀬莉緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1590">
+                    <img src="img/td_1590_0_nf.jpg">
+                    <p>ダイナマイトなサーブ　百瀬莉緒 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="46" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1226/">
+                    <img src="img/gree_1226_nf.jpg">
+                    <p>ﾀﾞｲﾅﾏｲﾄなｻ-ﾌﾞ 百瀬莉緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1590">
+                    <img src="img/td_1590_1_nf.jpg">
+                    <p>ダイナマイトなサーブ　百瀬莉緒 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="37" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2270/">
+                    <img src="img/gree_2270_nf.jpg">
+                    <p>ﾋﾞｭ-ﾃｨﾌﾙﾈｵﾝﾅｲﾄ 横山奈緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1595">
+                    <img src="img/td_1595_0_nf.jpg">
+                    <p>ご褒美モーニング　横山奈緒 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="37" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2271/">
+                    <img src="img/gree_2271_nf.jpg">
+                    <p>ご褒美ﾓ-ﾆﾝｸﾞ 横山奈緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1595">
+                    <img src="img/td_1595_1_nf.jpg">
+                    <p>ご褒美モーニング　横山奈緒 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="33" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1873/">
+                    <img src="img/gree_1873_nf.jpg">
+                    <p>はりきりｶﾞ-ﾙ 北沢志保</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1607">
+                    <img src="img/td_1607_0_nf.jpg">
+                    <p>ご褒美ジャグジー　北沢志保 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="33" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1874/">
+                    <img src="img/gree_1874_nf.jpg">
+                    <p>ご褒美ｼﾞｬｸﾞｼﾞ- 北沢志保</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1607">
+                    <img src="img/td_1607_1_nf.jpg">
+                    <p>ご褒美ジャグジー　北沢志保 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="24" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1232/">
+                    <img src="img/gree_1232_nf.jpg">
+                    <p>ﾜｸﾜｸ回遊娘 望月杏奈</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1608">
+                    <img src="img/td_1608_0_nf.jpg">
+                    <p>スプラッシュドリーム　望月杏奈 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="24" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1233/">
+                    <img src="img/gree_1233_nf.jpg">
+                    <p>ｽﾌﾟﾗｯｼｭﾄﾞﾘ-ﾑ 望月杏奈</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1608">
+                    <img src="img/td_1608_1_nf.jpg">
+                    <p>スプラッシュドリーム　望月杏奈 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1640625" idol_id="1" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card387/">
+                    <img src="img/gree_387_nf.jpg">
+                    <p>乙女のﾌﾟｰﾙｻｲﾄﾞ 天海春香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1609">
+                    <img src="img/td_1609_0_nf.jpg">
+                    <p>なごみの温泉　天海春香 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.21875" idol_id="1" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card303/">
+                    <img src="img/gree_303_nf.jpg">
+                    <p>なごみの温泉 天海春香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1609">
+                    <img src="img/td_1609_1_nf.jpg">
+                    <p>なごみの温泉　天海春香 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="17" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3093/">
+                    <img src="img/gree_3093_nf.jpg">
+                    <p>交番の穏やかな日常 田中琴葉</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1614">
+                    <img src="img/td_1614_0_nf.jpg">
+                    <p>照れ隠しの敬礼ポーズ　田中琴葉 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="17" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3094/">
+                    <img src="img/gree_3094_nf.jpg">
+                    <p>照れ隠しの敬礼ﾎﾟ-ｽﾞ 田中琴葉</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1614">
+                    <img src="img/td_1614_1_nf.jpg">
+                    <p>照れ隠しの敬礼ポーズ　田中琴葉 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="44" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1470/">
+                    <img src="img/gree_1470_nf.jpg">
+                    <p>ｻｲﾊﾞ-課の問題児 真壁瑞希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1615">
+                    <img src="img/td_1615_0_nf.jpg">
+                    <p>異国のひととき　真壁瑞希 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="44" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2553/">
+                    <img src="img/gree_2553_nf.jpg">
+                    <p>異国のひととき 真壁瑞希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1615">
+                    <img src="img/td_1615_1_nf.jpg">
+                    <p>異国のひととき　真壁瑞希 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="20" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2582/">
+                    <img src="img/gree_2582_nf.jpg">
+                    <p>COOL & SEXY! 所恵美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1620">
+                    <img src="img/td_1620_0_nf.jpg">
+                    <p>COOL & SEXY!　所恵美 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="20" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2583/">
+                    <img src="img/gree_2583_nf.jpg">
+                    <p>ｱﾌﾀ-ｽｸ-ﾙﾊﾟ-ﾘ-ﾀｲﾑ 所恵美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1620">
+                    <img src="img/td_1620_1_nf.jpg">
+                    <p>COOL & SEXY!　所恵美 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3205/">
+                    <img src="img/gree_3205_nf.jpg">
+                    <p>ｴｷｿﾞﾁｯｸｵｱｼｽ 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1632">
+                    <img src="img/td_1632_0_nf.jpg">
+                    <p>エキゾチックオアシス　高山紗代子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3206/">
+                    <img src="img/gree_3206_nf.jpg">
+                    <p>vivid color 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1632">
+                    <img src="img/td_1632_1_nf.jpg">
+                    <p>エキゾチックオアシス　高山紗代子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="39" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3207/">
+                    <img src="img/gree_3207_nf.jpg">
+                    <p>水の都でひと休み 馬場このみ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1633">
+                    <img src="img/td_1633_0_nf.jpg">
+                    <p>水の都でひと休み　馬場このみ (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="39" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3208/">
+                    <img src="img/gree_3208_nf.jpg">
+                    <p>水中ｷｬﾝﾃﾞｨ 馬場このみ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1633">
+                    <img src="img/td_1633_1_nf.jpg">
+                    <p>水の都でひと休み　馬場このみ (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1500/">
+                    <img src="img/gree_1500_nf.jpg">
+                    <p>ｱｼﾞｱﾝﾀｲﾑﾄﾘｯﾌﾟ 天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1634">
+                    <img src="img/td_1634_0_nf.jpg">
+                    <p>スパークタワーライブ　天空橋朋花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1501/">
+                    <img src="img/gree_1501_nf.jpg">
+                    <p>ｽﾊﾟ-ｸﾀﾜ-ﾗｲﾌﾞ 天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1634">
+                    <img src="img/td_1634_1_nf.jpg">
+                    <p>スパークタワーライブ　天空橋朋花 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="40" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1496/">
+                    <img src="img/gree_1496_nf.jpg">
+                    <p>はい､召し上がれ! 大神環</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1638">
+                    <img src="img/td_1638_0_nf.jpg">
+                    <p>きらきら一番星ステージ　大神環 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="40" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1497/">
+                    <img src="img/gree_1497_nf.jpg">
+                    <p>きらきら一番星ｽﾃ-ｼﾞ 大神環</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1638">
+                    <img src="img/td_1638_1_nf.jpg">
+                    <p>きらきら一番星ステージ　大神環 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.140625" idol_id="6" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1775/">
+                    <img src="img/gree_1775_nf.jpg">
+                    <p>涼しげなｼﾙｴｯﾄ 菊地真</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1639">
+                    <img src="img/td_1639_0_nf.jpg">
+                    <p>さわやかお姉さん　菊地真 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2109375" idol_id="6" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1491/">
+                    <img src="img/gree_1491_nf.jpg">
+                    <p>さわやかお姉さん 菊地真</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1639">
+                    <img src="img/td_1639_1_nf.jpg">
+                    <p>さわやかお姉さん　菊地真 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.28125" idol_id="9" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card184/">
+                    <img src="img/gree_184_nf.jpg">
+                    <p>いつもの朝 秋月律子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1646">
+                    <img src="img/td_1646_0_nf.jpg">
+                    <p>いたずらもみじ　秋月律子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1015625" idol_id="9" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2044/">
+                    <img src="img/gree_2044_nf.jpg">
+                    <p>いたずらもみじ 秋月律子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1646">
+                    <img src="img/td_1646_1_nf.jpg">
+                    <p>いたずらもみじ　秋月律子 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
