--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <title>ミリシタSSR</title>
     <style>
-        .sub {
-            display: inline-block;
-        }
+body, div, a {
+    margin: 0;
+}
+.parent {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.sub {
+  width: 50%;
+  height: 100%;
+  object-fit: cover;
+}
+.sub img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
     </style>
 </head>
 <body>
