--- a/million/card/index.html
+++ b/million/card/index.html
@@ -15255,4 +15255,172 @@
                     <p>千人隊長　天空橋朋花 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.1015625" idol_id="45" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1079/">
+                    <img src="img/gree_1079_nf.jpg">
+                    <p>二人なら安心! 篠宮可憐</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1891">
+                    <img src="img/td_1891_0_nf.jpg">
+                    <p>つないだ絆　篠宮可憐 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1171875" idol_id="45" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1080/">
+                    <img src="img/gree_1080_nf.jpg">
+                    <p>つないだ絆 篠宮可憐</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1891">
+                    <img src="img/td_1891_1_nf.jpg">
+                    <p>つないだ絆　篠宮可憐 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2421875" idol_id="1" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1077/">
+                    <img src="img/gree_1077_nf.jpg">
+                    <p>笑って再ﾄﾗｲ! 天海春香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1892">
+                    <img src="img/td_1892_0_nf.jpg">
+                    <p>演劇パフォーマンス　天海春香 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.15625" idol_id="1" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card685/">
+                    <img src="img/gree_685_nf.jpg">
+                    <p>演劇ﾊﾟﾌｫ-ﾏﾝｽ 天海春香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1892">
+                    <img src="img/td_1892_1_nf.jpg">
+                    <p>演劇パフォーマンス　天海春香 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.125" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2039/">
+                    <img src="img/gree_2039_nf.jpg">
+                    <p>導きの歌声 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1897">
+                    <img src="img/td_1897_0_nf.jpg">
+                    <p>導きの歌声　如月千早 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.25" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2040/">
+                    <img src="img/gree_2040_nf.jpg">
+                    <p>Just be myself!! 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1897">
+                    <img src="img/td_1897_1_nf.jpg">
+                    <p>導きの歌声　如月千早 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1939/">
+                    <img src="img/gree_1939_nf.jpg">
+                    <p>ﾍﾞ-ｽﾎﾞ-ﾙﾗｲﾌﾞ 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1909">
+                    <img src="img/td_1909_0_nf.jpg">
+                    <p>ふわふわ金魚　高山紗代子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1940/">
+                    <img src="img/gree_1940_nf.jpg">
+                    <p>ふわふわ金魚 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1909">
+                    <img src="img/td_1909_1_nf.jpg">
+                    <p>ふわふわ金魚　高山紗代子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="42" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1943/">
+                    <img src="img/gree_1943_nf.jpg">
+                    <p>ﾄﾞﾗｲﾌﾞﾗｲﾌﾞ 宮尾美也</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1910">
+                    <img src="img/td_1910_0_nf.jpg">
+                    <p>時代の風雲児！　宮尾美也 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="42" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1944/">
+                    <img src="img/gree_1944_nf.jpg">
+                    <p>時代の風雲児! 宮尾美也</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1910">
+                    <img src="img/td_1910_1_nf.jpg">
+                    <p>時代の風雲児！　宮尾美也 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="49" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2586/">
+                    <img src="img/gree_2586_nf.jpg">
+                    <p>お澄ましﾚﾃﾞｨ 周防桃子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1911">
+                    <img src="img/td_1911_0_nf.jpg">
+                    <p>初めての花火　周防桃子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="49" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card530/">
+                    <img src="img/gree_530_nf.jpg">
+                    <p>初めての花火 周防桃子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1911">
+                    <img src="img/td_1911_1_nf.jpg">
+                    <p>初めての花火　周防桃子 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
