--- a/million/card/index.html
+++ b/million/card/index.html
@@ -15423,4 +15423,88 @@
                     <p>初めての花火　周防桃子 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="44" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1864/">
+                    <img src="img/gree_1864_nf.jpg">
+                    <p>うっかりﾌﾟﾘﾝｽ様 真壁瑞希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1915">
+                    <img src="img/td_1915_0_nf.jpg">
+                    <p>水上の花嫁　真壁瑞希 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="44" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1865/">
+                    <img src="img/gree_1865_nf.jpg">
+                    <p>水上の花嫁 真壁瑞希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1915">
+                    <img src="img/td_1915_1_nf.jpg">
+                    <p>水上の花嫁　真壁瑞希 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="19" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2501/">
+                    <img src="img/gree_2501_nf.jpg">
+                    <p>遅刻は厳禁! 佐竹美奈子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1916">
+                    <img src="img/td_1916_0_nf.jpg">
+                    <p>てんこ盛りファーストバイト　佐竹美奈子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="19" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1211/">
+                    <img src="img/gree_1211_nf.jpg">
+                    <p>てんこ盛りﾌｧ-ｽﾄﾊﾞｲﾄ 佐竹美奈子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1916">
+                    <img src="img/td_1916_1_nf.jpg">
+                    <p>てんこ盛りファーストバイト　佐竹美奈子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1796875" idol_id="7" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2696/">
+                    <img src="img/gree_2696_nf.jpg">
+                    <p>可憐なｱﾝﾃｨ-ｸﾄﾞ-ﾙ 水瀬伊織</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1979">
+                    <img src="img/td_1979_0_nf.jpg">
+                    <p>可憐なアンティークドール　水瀬伊織 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1328125" idol_id="7" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2697/">
+                    <img src="img/gree_2697_nf.jpg">
+                    <p>ﾌﾟﾗｲｳﾞｪｲﾄ･ﾛ-ﾄﾞｼｮｳ 水瀬伊織</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1979">
+                    <img src="img/td_1979_1_nf.jpg">
+                    <p>可憐なアンティークドール　水瀬伊織 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
